# dataframe

awsome/: pyproject.toml
awsome/tests/: test_awsome.py
