[tool.poetry]
name = "awsome"
version = "0.1.0"
description = ""
authors = ["John Dutchover <johndutchover@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
certifi = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
